--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <html>
 <body>
   <h1>
-    Page under construction
+    Help documentation for GEEN 165 Major Projects
   </h1>
+  <h2>
+    Using GitHub for Major Programming Assignments
+  </h2>
+  <link href="https://gist.github.com/ccannon94/511115be821a873ae9ec5f4db9cfdda0", Title="GitFlow Gist">
+  <h2>
+    Requesting Help from a TA
+  </h2>
+  <link href="https://gist.github.com/ccannon94/4980dc78456cb7a7ab38028e933cb01e", Title="Issues Gist">
 </body>
 </html>
