Split page into head and body

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
+<head>
   <h1>
     Help documentation for GEEN 165 Major Projects
   </h1>
+</head>
+  <body>
   <h2>
     Using GitHub for Major Programming Assignments
   </h2>
