Add a title for the webpage

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <h1>
-    Help documentation for GEEN 165 Major Projects
-  </h1>
+  <title>
+    NC A&T State University Computer Science GitHub Page
+  </title>
+  <h1>Help documentation for GEEN 165 Major Projects</h1>
+</head>
 </head>
   <body>
   <h2>
