--- a/index.html
+++ b/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>
-    NC A&T State University Computer Science GitHub Page
-  </title>
-  <h1>Help documentation for GEEN 165 Major Projects</h1>
+  <title>NC A&T State University Computer Science GitHub Page</title>
 </head>
   <body>
-	  
-  <h2>
-    Using GitHub for Major Programming Assignments
-  </h2>
-  <a href="https://gist.github.com/ccannon94/511115be821a873ae9ec5f4db9cfdda0">GitFlow Gist</a>
-  <h2>
-    Requesting Help from a TA
-</h2>
-  <a href="https://gist.github.com/ccannon94/4980dc78456cb7a7ab38028e933cb01e">Issues Gist</a>
-</body>
+	  <div class="wrapper">
+		  <h1>Help documentation for GEEN 165 Major Projects</h1>
+		  <h2>Using GitHub for Major Programming Assignments</h2>
+		  <a href="https://gist.github.com/ccannon94/511115be821a873ae9ec5f4db9cfdda0">GitFlow Gist</a>
+		  <h2>Requesting Help from a TA</h2>
+		  <a href="https://gist.github.com/ccannon94/4980dc78456cb7a7ab38028e933cb01e">Issues Gist</a>
+	  </div>
+	</body>
 </html>
