Add main heading to it's own div

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 </head>
   <body>
 	  <div class="wrapper">
-		  <h1>Help documentation for GEEN 165 Major Projects</h1>
+		  <div class="heading">
+		  	<h1>Help documentation for GEEN 165 Major Projects</h1>
+		  </div>
 		  <h2>Using GitHub for Major Programming Assignments</h2>
 		  <a href="https://gist.github.com/ccannon94/511115be821a873ae9ec5f4db9cfdda0">GitFlow Gist</a>
 		  <h2>Requesting Help from a TA</h2>
