Add link to style.css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>NC A&T State University Computer Science GitHub Page</title>
+  <link rel="stylesheet" href="style.css" type="text/css"/>
 </head>
   <body>
 	  <div class="wrapper">
