Add link to repo in footer

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			  <a href="https://gist.github.com/ccannon94/4980dc78456cb7a7ab38028e933cb01e">Issues Gist</a>
 		  </div>
 		  <div class="footer">
-			  Contact information at bottom
+			  Students, you can view the source code for this website on our <a href="https://github.com/NCAndTCS/NCAndTCS.github.io">GitHub Repository</a>
 		  </div>
 	  </div>
 	</body>
