--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 		  	<h1>Help documentation for GEEN 165 Major Projects</h1>
 		  </div>
 		  <div class="sidebar">
-			  Navigation will go here
+			  <a href="instructorResources.html">Resources for TA's</a>
+			  <br><br>
+			  <a href="studentResources.html">Additional Resources for Students</a>
 		  </div>
 		  <div class="content">
 			  <h2>Using GitHub for Major Programming Assignments</h2>
