Add links to navigation on instructorResources

--- a/instructorResources.html
+++ b/instructorResources.html
@@ -10,6 +10,9 @@
 				Resources for GEEN 165 TA's
 			</div>
 			<div class="sidebar">
+			  <a href="index.html">Home</a>
+			  <br><br>
+			  <a href="studentResources.html">Additional Resources for Students</a>
 			</div>
 			<div class="content">
 				
