Add links to navigation on studentResources

--- a/studentResources.html
+++ b/studentResources.html
@@ -10,6 +10,9 @@
 				<h1>Additional Git Resources for GEEN 165 Students</h1>
 			</div>
 			<div class="sidebar">
+				<a href="index.html">Home</a>
+				<br><br>
+				<a href="instructorResources.html">Resources for TA's</a>
 			</div>
 			<div class="content">
 			</div>
