Add heading tag to instructorResources page

--- a/instructorResources.html
+++ b/instructorResources.html
@@ -7,7 +7,7 @@
 	<body>
 		<div class="wrapper">
 			<div class="heading">
-				Resources for GEEN 165 TA's
+				<h1>Resources for GEEN 165 TA's</h1>
 			</div>
 			<div class="sidebar">
 			  <a href="index.html">Home</a>
