Add "developed by" to footer

--- a/studentResources.html
+++ b/studentResources.html
@@ -18,6 +18,7 @@
 			</div>
 			<div class="footer">
 				Students, you can view the source code for this website on our <a href="https://github.com/NCAndTCS/NCAndTCS.github.io">GitHub Repository</a>
+				Site developed by <a href="https://github.com/CCannon94">@CCannon94</a>
 			</div>
 		</div>
 	</body>
