--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 		  	<h1>Help documentation for GEEN 165 Major Projects</h1>
 		  </div>
 		  <div class="sidebar">
+			  <a href="instructorResources.html">Resources for TA's</a>
+			  <br><br>
+			  <a href="studentResources.html">Additional Resources for Students</a>
 		  </div>
 		  <div class="content">
 			  <h2>Using GitHub for Major Programming Assignments</h2>
@@ -19,7 +22,6 @@
 		  </div>
 		  <div class="footer">
 			  Students, you can view the source code for this website on our <a href="https://github.com/NCAndTCS/NCAndTCS.github.io">GitHub Repository</a>
-			  <br>
 			  Site developed by <a href="https://github.com/CCannon94">@CCannon94</a>
 		  </div>
 	  </div>
