--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 			  <a href="https://gist.github.com/ccannon94/a75f1f725d33a1834dd7f5feebbc7d4b">MergeConflict Gist</a>
 			  <h2>Requesting Help from a TA</h2>
 			  <a href="https://gist.github.com/ccannon94/4980dc78456cb7a7ab38028e933cb01e">Issues Gist</a>
+			  <br>
+			  <br>
+			  <br>
+			  <h2>Major Program 1 Solution Example</h2>
+			  <a href="https://github.com/ccannon94/ncat-geen165-mp1-solution">Solution GitHub Repository</a>
 		  </div>
 		  <div class="footer">
 			  Students, you can view the source code for this website on our <a href="https://github.com/NCAndTCS/NCAndTCS.github.io">GitHub Repository</a>
