Add GitHub develper pack

--- a/studentResources.html
+++ b/studentResources.html
@@ -15,6 +15,8 @@
 				<a href="instructorResources.html">Resources for TA's</a>
 			</div>
 			<div class="content">
+			<h2>GitHub Student Developer Pack</h2>
+			<p>This is a great collection of software from GitHub and it's partners that provides tons of free software for students. This includes the ability to create free private GitHub resources, access the full features of continuous integration services like TravisCI, and more. Sign up for the pack using your GitHub account <a href="https://education.github.com/pack">here.</a></p>
 			</div>
 			<div class="footer">
 				Students, you can view the source code for this website on our <a href="https://github.com/NCAndTCS/NCAndTCS.github.io">GitHub Repository</a>
