--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 			  <br>
 			  <h2>Major Program 1 Solution Example</h2>
 			  <a href="https://github.com/ccannon94/ncat-geen165-mp1-solution">Solution GitHub Repository</a>
+			  <br>
+			  <h2>Major Program 2 Solution Example</h2>
+			  <a href="https://github.com/ccannon94/ncat-geen165-mp2-solution">Solution GitHib Repository</a>
 		  </div>
 		  <div class="footer">
 			  Students, you can view the source code for this website on our <a href="https://github.com/NCAndTCS/NCAndTCS.github.io">GitHub Repository</a>
