--- a/studentResources.html
+++ b/studentResources.html
@@ -22,8 +22,7 @@
 				<p>Sometimes, computer science textbooks are too expensive, or too hard to read! Here are some that aren't:</p>
 				<ul>
 					<li><a href="https://www.manning.com/books/grokking-algorithms">Grokking Algorithms</a> <br> This is a GREAT book about basic algorithms that explains some complex topics in a very approachable way. 10/10</li>
-					<li><a href="http://opendatastructures.org">Open Data Structures</a> <br> A higher level but <i>absolutely free</i> resource for learning basic data structures. There are Java, C++, and pseucode/python versions.</li>
-					<li>
+					<li><a href="http://opendatastructures.org">Open Data Structures</a> <br> A higher level but <i>absolutely free</i> resource for learning basic data structures. There are Java, C++, and pseudocode/python versions.</li>
 				</ul>
 			</div>
 			<div class="footer">
