Add Pro Git to reading list

--- a/studentResources.html
+++ b/studentResources.html
@@ -23,6 +23,7 @@
 				<ul>
 					<li><a href="https://www.manning.com/books/grokking-algorithms">Grokking Algorithms</a> <br> This is a GREAT book about basic algorithms that explains some complex topics in a very approachable way. 10/10</li>
 					<li><a href="http://opendatastructures.org">Open Data Structures</a> <br> A higher level but <i>absolutely free</i> resource for learning basic data structures. There are Java, C++, and pseudocode/python versions.</li>
+					<li><a href="https://git-scm.com/book/en/v2">Pro Git</a> <br> A free book that explains everything you've ever wanted to know about git, and about 1,500 things you'd have never thought to ask. Also, FREE.</li>
 				</ul>
 			</div>
 			<div class="footer">
