--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 			  <a href="https://gist.github.com/ccannon94/511115be821a873ae9ec5f4db9cfdda0">GitFlow Gist</a>
 			  <h2>Resolving Merge Conflicts</h2>
 			  <a href="https://gist.github.com/ccannon94/a75f1f725d33a1834dd7f5feebbc7d4b">MergeConflict Gist</a>
+			  <h2>Forking Repositories</h2> 
+			  <a href="https://gist.github.com/ccannon94/2d69b4c988f1298ebeb1a0873c7685f9">Forking Gist</a>
 			  <h2>Requesting Help from a TA</h2>
 			  <a href="https://gist.github.com/ccannon94/4980dc78456cb7a7ab38028e933cb01e">Issues Gist</a>
 			  <br>
