Add lab quiz solution links to index.html

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 			  <br>
 			  <h2>Major Program 2 Solution Example</h2>
 			  <a href="https://github.com/ccannon94/ncat-geen165-mp2-solution">Solution GitHib Repository</a>
+			  <h2>Lab Quiz Solutions</h2>
+			  <h3>Sections 1 and 2 (Monday Lab)</h3>
+			  <a href="https://github.com/ccannon94/ncat-geen165-lab-quiz-solution-a">Lab Quiz A Solution</a>
+			  <h3>Sections 3 and 4 (Wednesday Lab)</h3>
+			  <a href="https://github.com/ccannon94/ncat-geen165-lab-quiz-solution-b">Lab Quiz B Solution</a>
 		  </div>
 		  <div class="footer">
 			  Students, you can view the source code for this website on our <a href="https://github.com/NCAndTCS/NCAndTCS.github.io">GitHub Repository</a>
