--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <body>
 	  <div class="wrapper">
 		  <div class="heading">
-		  	<h1>Help documentation for GEEN 165 Major Projects</h1>
+		  	<h1>Computer Program Design Resources</h1>
+        <h2>North Carolina A&T State University</h2>
+        <h2>Department of Computer Science</h2>
 		  </div>
 		  <div class="sidebar">
 			  <a href="instructorResources.html">Resources for TA's</a>
@@ -19,7 +21,7 @@
 			  <a href="https://gist.github.com/ccannon94/511115be821a873ae9ec5f4db9cfdda0">GitFlow Gist</a>
 			  <h2>Resolving Merge Conflicts</h2>
 			  <a href="https://gist.github.com/ccannon94/a75f1f725d33a1834dd7f5feebbc7d4b">MergeConflict Gist</a>
-			  <h2>Forking Repositories</h2> 
+			  <h2>Forking Repositories</h2>
 			  <a href="https://gist.github.com/ccannon94/2d69b4c988f1298ebeb1a0873c7685f9">Forking Gist</a>
 			  <h2>Requesting Help from a TA</h2>
 			  <a href="https://gist.github.com/ccannon94/4980dc78456cb7a7ab38028e933cb01e">Issues Gist</a>
