--- a/studentResources.html
+++ b/studentResources.html
@@ -25,6 +25,9 @@
 					<li><a href="http://opendatastructures.org">Open Data Structures</a> <br> A higher level but <i>absolutely free</i> resource for learning basic data structures. There are Java, C++, and pseudocode/python versions.</li>
 					<li><a href="https://git-scm.com/book/en/v2">Pro Git</a> <br> A free book that explains everything you've ever wanted to know about git, and about 1,500 things you'd have never thought to ask. Also, FREE.</li>
 				</ul>
+				<br><br>
+				<h2>Class Archives</h2>
+				<p>You can view solutions from previous semesters <a href="archives.html">here</a>.</p>
 			</div>
 			<div class="footer">
 				Students, you can view the source code for this website on our <a href="https://github.com/NCAndTCS/NCAndTCS.github.io">GitHub Repository</a>
