Update heading of Instructor Resources page

--- a/instructorResources.html
+++ b/instructorResources.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>NC A&T State University Resources for GEEN 165 TA's</title>
+		<title>NC A&T State University Resources for Computer Program Design Teaching Assistants</title>
 		<link rel="stylesheet" href="style.css" type="text/css"/>
 	</head>
 	<body>
 		<div class="wrapper">
 			<div class="heading">
-				<h1>Resources for GEEN 165 TA's</h1>
+				<h1>Resources for Computer Program Design Teaching Assistants</h1>
 			</div>
 			<div class="sidebar">
 			  <a href="index.html">Home</a>
