--- a/instructorResources.html
+++ b/instructorResources.html
@@ -15,7 +15,8 @@
 			  <a href="studentResources.html">Additional Resources for Students</a>
 			</div>
 			<div class="content">
-				
+				<h3><a href="https://github.com/konzy/mass_clone">Mass Clone</a></h3>
+				<p>Mass clone is a command line tool that will allow you to clone all repositories from a specific assignment at one time. This is especially helpful when grading major programs.</p>
 			</div>
 			<div class="footer">
 				Students, you can view the source code for this website on our <a href="https://github.com/NCAndTCS/NCAndTCS.github.io">GitHub Repository</a>
