--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 			  <a href="studentResources.html">Additional Resources for Students</a>
 		  </div>
 		  <div class="content">
+        <h2>Git Introduction Presentation</h2>
+        <a href="https://github.com/NCAndTCS/COMP167-Class-Resources/blob/master/COMP167GitIntro.pdf">An Introduction to Git and GitHub: Source Control for COMP 167</a>
 			  <h2>Using GitHub for Major Programming Assignments</h2>
 			  <a href="https://gist.github.com/ccannon94/511115be821a873ae9ec5f4db9cfdda0">GitFlow Gist</a>
 			  <h2>Resolving Merge Conflicts</h2>
