Add Installing git gist to website

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 		  <div class="content">
         <h2>Git Introduction Presentation</h2>
         <a href="https://github.com/NCAndTCS/COMP167-Class-Resources/blob/master/COMP167GitIntro.pdf">An Introduction to Git and GitHub: Source Control for COMP 167</a>
+        <h2>Installing Git</h2>
+        <a href="https://gist.github.com/ccannon94/35ab3b6b7d8df79c76eb338fe0c8eabb">Git Installation Gist</a>
 			  <h2>Using GitHub for Major Programming Assignments</h2>
         <!--TODO: Replace Gist with one designed for Command Line -->
 			  <a href="https://gist.github.com/ccannon94/511115be821a873ae9ec5f4db9cfdda0">GitFlow Gist</a>
