Add command line gist

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 		  <div class="content">
         <h2>Git Introduction Presentation</h2>
         <a href="https://github.com/NCAndTCS/COMP167-Class-Resources/blob/master/COMP167GitIntro.pdf">An Introduction to Git and GitHub: Source Control for COMP 167</a>
-			  <h2>Using GitHub for Major Programming Assignments</h2>
-        <!--TODO: Replace Gist with one designed for Command Line -->
-			  <a href="https://gist.github.com/ccannon94/511115be821a873ae9ec5f4db9cfdda0">GitFlow Gist</a>
+			  <h2>Using Git from Comand Line</h2>
+			  <a href="https://gist.github.com/ccannon94/982d69b23659d66c0ca6fb1384f94c97">Command Line Git Gist</a>
+        <!--TODO: Add Gist combining command line git with major programming assignment-->
         <!--TODO: Fix Merge Conflict Gist to use command line instead of desktop-->
         <h2>Resolving Merge Conflicts</h2>
 			  <a href="https://gist.github.com/ccannon94/a75f1f725d33a1834dd7f5feebbc7d4b">MergeConflict Gist</a>
