Add link to GitHub organization

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 			  <a href="studentResources.html">Additional Resources for Students</a>
 		  </div>
 		  <div class="content">
+        <h2>GitHub Organization</h2>
+        <p>If you cannot find your GitHub repositories, they are all located within our class's GitHub organization <a href="https://github.com/NCAT-COMP167-Fall2017">here</a>
         <h2>Git Introduction Presentation</h2>
         <a href="https://github.com/NCAndTCS/COMP167-Class-Resources/blob/master/COMP167GitIntro.pdf">An Introduction to Git and GitHub: Source Control for COMP 167</a>
 			  <h2>Using Git from Comand Line</h2>
