Fix spelling of command

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p>If you cannot find your GitHub repositories, they are all located within our class's GitHub organization <a href="https://github.com/NCAT-COMP167-Fall2017">here</a>
         <h2>Git Introduction Presentation</h2>
         <a href="https://github.com/NCAndTCS/COMP167-Class-Resources/blob/master/COMP167GitIntro.pdf">An Introduction to Git and GitHub: Source Control for COMP 167</a>
-			  <h2>Using Git from Comand Line</h2>
+			  <h2>Using Git from Command Line</h2>
 			  <a href="https://gist.github.com/ccannon94/982d69b23659d66c0ca6fb1384f94c97">Command Line Git Gist</a>
         <!--TODO: Add Gist combining command line git with major programming assignment-->
         <!--TODO: Fix Merge Conflict Gist to use command line instead of desktop-->
