--- a/studentResources.html
+++ b/studentResources.html
@@ -19,7 +19,8 @@
 				<p>This is a great collection of software from GitHub and it's partners that provides tons of free software for students. This includes the ability to create free private GitHub resources, access the full features of continuous integration services like TravisCI, and more. Sign up for the pack using your GitHub account <a href="https://education.github.com/pack">here.</a></p>
 				<br> <br>
 				<h2>Solutions</h2>
-				<h3><a href="https://github.com/NCAT-COMP167-Fall2017/lab-2-solution">Lab 2 Solution</a></h3>
+				<h3>Lab 2 Solution</h3>
+				<a href="https://github.com/NCAT-COMP167-Fall2017/lab-2-solution">Lab 2 Solution Repository</a>
 				<br> <br>
 				<h2>Chris' Reading List</h2>
 				<p>Sometimes, computer science textbooks are too expensive, or too hard to read! Here are some that aren't:</p>
