--- a/index.html
+++ b/index.html
@@ -18,17 +18,24 @@
 		  </div>
 		  <div class="content">
         <h2>GitHub Organization</h2>
-        <p>If you cannot find your GitHub repositories, they are all located within our class's GitHub organization <a href="https://github.com/NCAT-COMP167-Fall2017">here</a>
+        <p>If you cannot find your GitHub repositories, they are all located within our class's GitHub organization <a href="https://github.com/NCAT-COMP167-Fall2017">here</a></p>
+        <br>
         <h2>Git Introduction Presentation</h2>
         <a href="https://github.com/NCAndTCS/COMP167-Class-Resources/blob/master/COMP167GitIntro.pdf">An Introduction to Git and GitHub: Source Control for COMP 167</a>
+        <br>
 			  <h2>Using Git from Command Line</h2>
 			  <a href="https://gist.github.com/ccannon94/982d69b23659d66c0ca6fb1384f94c97">Command Line Git Gist</a>
-        <!--TODO: Add Gist combining command line git with major programming assignment-->
+        <br>
+        <h2>Git for Major Programming Assignments</h2>
+        <a href="https://gist.github.com/ccannon94/511115be821a873ae9ec5f4db9cfdda0">Major Programs Gist</a>
         <!--TODO: Fix Merge Conflict Gist to use command line instead of desktop-->
+        <br>
         <h2>Resolving Merge Conflicts</h2>
 			  <a href="https://gist.github.com/ccannon94/a75f1f725d33a1834dd7f5feebbc7d4b">MergeConflict Gist</a>
+        <br>
 			  <h2>Forking Repositories</h2>
 			  <a href="https://gist.github.com/ccannon94/2d69b4c988f1298ebeb1a0873c7685f9">Forking Gist</a>
+        <br>
 			  <h2>Requesting Help from a TA</h2>
 			  <a href="https://gist.github.com/ccannon94/4980dc78456cb7a7ab38028e933cb01e">Issues Gist</a>
 		  </div>
