Add lab 3 solution to student resources

--- a/studentResources.html
+++ b/studentResources.html
@@ -21,6 +21,9 @@
 				<h2>Solutions</h2>
 				<h3>Lab 2 Solution</h3>
 				<a href="https://github.com/NCAT-COMP167-Fall2017/lab-2-solution">Lab 2 Solution Repository</a>
+				<br>
+				<h3>Lab 3 Solution</h3>
+				<a href="https://github.com/NCAT-COMP167-Fall2017/lab-3-solution">Lab 3 Solution Repository</a>
 				<br> <br>
 				<h2>Chris' Reading List</h2>
 				<p>Sometimes, computer science textbooks are too expensive, or too hard to read! Here are some that aren't:</p>
