Add lab 4 solution to student resources

--- a/studentResources.html
+++ b/studentResources.html
@@ -24,6 +24,9 @@
 				<br>
 				<h3>Lab 3 Solution</h3>
 				<a href="https://github.com/NCAT-COMP167-Fall2017/lab-3-solution">Lab 3 Solution Repository</a>
+				<br>
+				<h3>Lab 4 Solution</h3>
+				<a href="https://github.com/NCAT-COMP167-Fall2017/Lab-4-Solution">Lab 4 Solution Repository</a>
 				<br> <br>
 				<h2>Chris' Reading List</h2>
 				<p>Sometimes, computer science textbooks are too expensive, or too hard to read! Here are some that aren't:</p>
