Add youtube video to site

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 			  <a href="https://gist.github.com/ccannon94/982d69b23659d66c0ca6fb1384f94c97">Command Line Git Gist</a>
         <br>
         <h2>Git for Major Programming Assignments</h2>
-        <a href="https://gist.github.com/ccannon94/511115be821a873ae9ec5f4db9cfdda0">Major Programs Gist</a>
+			  <a href="https://www.youtube.com/watch?v=l2bP9JKQkdA">Major Programs GitHub YouTube Video</a>
+        		  <a href="https://gist.github.com/ccannon94/511115be821a873ae9ec5f4db9cfdda0">Major Programs Gist</a>
         <!--TODO: Fix Merge Conflict Gist to use command line instead of desktop-->
         <br>
         <h2>Resolving Merge Conflicts</h2>
