Add Lab 7 solution to website

--- a/studentResources.html
+++ b/studentResources.html
@@ -30,6 +30,9 @@
 				<br>
 				<h3>Major Program 1 Solution</h3>
 				<a href="https://github.com/NCAT-COMP167-Fall2017/MP1-solution">Major Program 1 Solution Repository</a>
+				<br>
+				<h3>Lab 7 Solution</h3>
+				<a href="https://github.com/NCAT-COMP167-Fall2017/lab-7-simple-inheritance-ccannon94">Lab 7 Solution Repository</a>
 				<br> <br>
 				<h2>Chris' Reading List</h2>
 				<p>Sometimes, computer science textbooks are too expensive, or too hard to read! Here are some that aren't:</p>
