--- a/studentResources.html
+++ b/studentResources.html
@@ -36,6 +36,9 @@
 				<br>
 				<h3>Major Program 2 Solution</h3>
 				<a href="https://github.com/NCAT-COMP167-Fall2017/MP2-Solution">Major Program 2 Solution Repository</a>
+				<br>
+				<h3>Lab 9 JavaFX Solution</h3>
+				<a href="https://github.com/NCAT-COMP167-Fall2017/lab-9-javafx-ccannon94">Lab 9 Solution Repository</a>
 				<br> <br>
 				<h2>Chris' Reading List</h2>
 				<p>Sometimes, computer science textbooks are too expensive, or too hard to read! Here are some that aren't:</p>
